<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/car_icon" />

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/destinationID"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/destination"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/agencyID"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/agency" />

</LinearLayout>