<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SuggestionActivity">

    <TextView
        android:id="@+id/activity_suggestion_txt"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:text="@string/suggestion"
        android:textSize="40sp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/activity_suggestion_destination"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="207dp"
        android:textSize="30sp"
        android:hint="@string/destination"
        android:inputType="text"/>

    <Button
        android:id="@+id/activity_suggestion_btn"
        android:layout_width="152dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="151dp"
        android:text="@string/confirm"
        android:textSize="20sp"/>

</RelativeLayout>