<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/aimageViewID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/car_icon" />

    <LinearLayout
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/adestinationID"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/destination"
            android:textSize="24sp"
            android:textStyle="bold" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/amonthID"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/adayID"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>