<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">

    <Button
        android:id="@+id/activity_main_user_button"
        android:layout_width="191dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/user"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="0dp"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/activity_main_agency_button"
        android:layout_width="191dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/agency"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:layout_width="367dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity=""
        android:layout_marginTop="97dp"
        android:text="@string/choose_button"
        android:textAlignment="center"
        android:textSize="50sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="140dp" />
</RelativeLayout>